Feat: 新增 代码沙箱的安全性问题的原生 Java 解决方案